name:                imgs
version:             0.3.0
synopsis:            A minimalistic image album file server
description:         Please see README.md
homepage:            https://github.com/soupi/imgs#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           2017 Gil Mizrahi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.Imgs

  ghc-options:         -Wall -fno-warn-type-defaults
                       -Wno-redundant-constraints
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.12
                     , Spock-core >= 0.12
                     , http-types
                     , mime-types
                     , lucid
                     , Spock-lucid
                     , optparse-generic
                     , text
                     , directory
                     , filepath
                     , bytestring
                     , file-embed

  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , ViewPatterns
                     , ScopedTypeVariables
                     , RecordWildCards
                     , NamedFieldPuns
                     , TupleSections
                     , DeriveFunctor
                     , DeriveGeneric
                     , EmptyDataDecls

executable imgs
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  -- uncomment for static executable
  -- ghc-options: -Wall -static -optl-static -optl-pthread -fPIC -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base >= 4.7 && < 5
                     , imgs

